# LightUnits

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
example/IntegralUnits/: Ampere.hpp  Conversions.hpp  IntegralValueSystem.hpp  Ohm.hpp  Volt.hpp
include/LightUnits/: BaseUnit.hpp  GenericConversions.hpp  MultiplyWithExponent.hpp  Prefix.hpp  TypeTags.hpp  ValueSystem.hpp
test/: BaseUnitTest.cpp  CMakeLists.txt  ExampleConversionTest.cpp  ValueSystemTest.cpp
